# vanadium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ledger_app.toml  vanadium.code-workspace
.github/workflows/: ci.yaml  publish_binaries.yaml  reusable_native_tests.yaml  reusable_vapp_build.yaml  reusable_vapp_integration_tests.yaml
app-sdk/: .gitignore  Cargo.toml  README.md  build.rs  justfile
app-sdk/.cargo/: config.toml
app-sdk/build_utils/: mod.rs
app-sdk/src/: app.rs  bignum.rs  comm.rs  curve.rs  ecall_constants.rs  ecalls.rs  ecalls_native.rs  ecalls_riscv.rs  hash.rs  lib.rs  rand.rs  slip21.rs  ux.rs
apps/bitcoin/: README.md  bitcoin.code-workspace
apps/bitcoin/app/: Cargo.toml  justfile
apps/bitcoin/app/.cargo/: config.toml
apps/bitcoin/app/src/: constants.rs  main.rs  merkle.rs  script.rs  taproot.rs
apps/bitcoin/app/src/accounts/: bip388.rs  conversions.rs  mod.rs
apps/bitcoin/app/src/handlers/: get_address.rs  get_extended_pubkey.rs  get_master_fingerprint.rs  mod.rs  register_account.rs  sign_psbt.rs
apps/bitcoin/client/: Cargo.toml
apps/bitcoin/client/src/: README.md  client.rs  lib.rs  main.rs
apps/bitcoin/client/tests/: integration_test.rs
apps/bitcoin/common/: .gitignore  Cargo.toml  README.md  build.rs
apps/bitcoin/common/src/: account.rs  bip388.rs  conversions.rs  errors.rs  fastpsbt.rs  lib.rs  psbt.rs  script.rs  taproot.rs
apps/bitcoin/common/src/message/: README.md  message.proto  message.rs  mod.rs
apps/demo/: demo.code-workspace
apps/demo/app/: Cargo.toml
apps/demo/app/src/: main.rs
apps/demo/client/: Cargo.toml
apps/demo/client/src/: lib.rs  main.rs
apps/ethereum/: CLAUDE.md  PROGRESS.md  README.md
apps/ethereum/app/: CLAUDE.md  Cargo.toml  justfile
apps/ethereum/app/src/: main.rs  state.rs  utils.rs
apps/ethereum/app/src/handlers/: config.rs  metadata.rs  mod.rs  sign_eip712.rs  sign_message.rs  sign_tx.rs
apps/ethereum/app/src/parsing/: abi.rs  eip7730.rs  mod.rs  rlp.rs  transaction.rs
apps/ethereum/client/: CLAUDE.md  Cargo.toml  justfile
apps/ethereum/client/src/: client.rs  lib.rs  main.rs
apps/ethereum/client/tests/: integration_test.rs
apps/rps/: README.md  rps.code-workspace
apps/sadik/: README.md  sadik.code-workspace
apps/sadik/app/: Cargo.toml  justfile
apps/sadik/app/.cargo/: config.toml
apps/sadik/app/src/: main.rs
apps/sadik/client/: Cargo.toml  justfile
apps/sadik/client/src/: client.rs  lib.rs
apps/sadik/client/tests/: integration_test.rs
apps/sadik/client/tests/test_common/: mod.rs
apps/template/: README.md  update-template.sh
apps/template/generate/client/: Cargo.toml
apps/template/generate/client/src/: lib.rs  main.rs
apps/test/: README.md
apps/test/app/: Cargo.toml  justfile
apps/test/app/.cargo/: config.toml
apps/test/app/src/: commands.rs  main.rs
apps/test/app/src/handlers/: base58.rs  count_primes.rs  mod.rs  sha256.rs  show_ux_screen.rs
apps/test/client/: Cargo.toml
apps/test/client/src/: client.rs  commands.rs  lib.rs  main.rs
apps/test/client/tests/: integration_test.rs
apps/test/client/tests/common/: mod.rs
apps/xous-ethapp/: Cargo.toml  README.md  justfile
apps/xous-ethapp/ethapp/: Cargo.toml
apps/xous-ethapp/ethapp-api/: Cargo.toml
apps/xous-ethapp/ethapp-api/src/: client.rs  error.rs  lib.rs
apps/xous-ethapp/ethapp-common/: Cargo.toml
apps/xous-ethapp/ethapp-common/src/: error.rs  lib.rs  opcodes.rs  types.rs
apps/xous-ethapp/ethapp/src/: crypto.rs  handlers.rs  main.rs  platform.rs  state.rs  ui.rs
apps/xous-ethapp/ethapp/src/parsing/: mod.rs  rlp.rs  transaction.rs
apps/xous-ethapp/ethapp/tests/: golden_vectors.rs
bench/: Cargo.toml  README.md  justfile
bench/src/: client.rs  main.rs
cargo-vnd/: Cargo.toml  README.md
cargo-vnd/src/: main.rs
client-sdk/: Cargo.toml  README.md
client-sdk/src/: apdu.rs  comm.rs  elf.rs  hash.rs  lib.rs  linewriter.rs  memory.rs  test_utils.rs  transport.rs  transport_native_hid.rs  vanadium_client.rs
common/: Cargo.toml  README.md
common/src/: accumulator.rs  client_commands.rs  comm.rs  constants.rs  ecall_constants.rs  lib.rs  manifest.rs  ux.rs  vm.rs
common/src/riscv/: decode.rs  mod.rs  op.rs
common/src/ux/: codec.rs  mod.rs  types.rs
docs/: README.md  architecture.md  ecalls.md  manifest.md  security.md
docs/ethereum/: CLAUDE.md  architecture.md  commands.md  ux-spec.md
ecalls/: Cargo.toml
ecalls/src/: ecalls_impl.rs  lib.rs
host/: Cargo.toml  README.md
host/src/: apdu.rs  elf.rs  main.rs  transport.rs  vanadium_client.rs
libs/base58/: Cargo.toml  README.md
libs/bitcoin/: Cargo.toml  README.md
libs/bitcoin-hashes/: Cargo.toml
libs/bitcoin/src/: bip158.rs  lib.rs
libs/bitcoin/src/blockdata/: block.rs  transaction.rs
libs/bitcoin/src/blockdata/script/: mod.rs
libs/bitcoin/src/consensus/: encode.rs  serde.rs
libs/bitcoin/src/crypto/: sighash.rs
libs/bitcoin/src/merkle_tree/: block.rs  mod.rs
libs/bitcoin/src/psbt/: mod.rs
libs/bitcoin/src/taproot/: mod.rs
libs/bitcoin/tests/: bip_174.rs  psbt-sign-taproot.rs
libs/bitcoin_hashes/: Cargo.toml  README.md
libs/getrandom/: Cargo.toml
libs/secp256k1/: Cargo.toml  README.md
libs/secp256k1/secp256k1-sys/: Cargo.toml  build.rs
libs/secp256k1/secp256k1-sys/src/: lib.rs
libs/secp256k1/src/: constants.rs  context.rs  key.rs  lib.rs  macros.rs  scalar.rs  schnorr.rs  sdk_helpers.rs  secret.rs
libs/secp256k1/src/ecdsa/: mod.rs  serialized_signature.rs
libs/secp256k1/tests/: serde.rs
macros/: Cargo.toml
macros/src/: derive_serializable.rs  lib.rs
tools/vanalyze/: Cargo.toml  (+1 more)
vm/: .gitignore  Cargo.toml  README.md  build.rs  download_vanadium.sh  justfile  ledger_app.toml  load_vanadium.sh
vm/.cargo/: config.toml
vm/src/: aes.rs  hash.rs  io.rs  main.rs  settings.rs
vm/src/app_tests/: mod.rs  test_aes.rs
vm/src/app_ui/: menu.rs
vm/src/handlers/: get_version.rs  mod.rs  register_vapp.rs  start_vapp.rs
vm/src/handlers/lib/: ecall.rs  evict.rs  mod.rs  outsourced_mem.rs  vapp.rs
vm/src/handlers/lib/ecall/: bitmaps.rs  slip21.rs  ux_handler.rs
(+56 files in other folders)
