[package]
name = "vanadium-app-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
critical-section = "1.1.2"
subtle = { version="2.6.1", default-features = false }
hex-literal = "0.4.1"
zeroize = "1.8.1"

[features]
# Enable this in V-App's dev-dependencies
test-mode = [] 

[build-dependencies]
common = { path = "../common", features = ["wrapped_serializable"] }

[target.'cfg(target_arch = "riscv32")'.dependencies]
embedded-alloc = "0.5.1"
vanadium-ecalls = { path = "../ecalls" }

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
bip32 = "0.5.2"
hex = "0.4.3"
hmac = "0.12.1"
k256 = { version = "0.13.4", default-features = false, features = ["alloc", "ecdsa-core", "schnorr"] }
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.1"
ripemd = "0.1.3"
sha2 = "0.10.8"
