[package]
name = "cargo-vnd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-vnd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
common = { path = "../common", features = ["serde_json"] }
client_sdk = { path = "../client-sdk", package="vanadium-client-sdk", features=["cargo_toml"], default-features = false }
which = "7.0.3"
cargo-generate = "0.23.7"
