[package]
name = "vanadium-client-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["cargo_toml", "transport"]
transport = ["hidapi", "ledger-apdu"]
debug = ["dep:log"]

# utilities for integration tests
test-utils = ["transport"]

[dependencies]

app-sdk = { package = "vanadium-app-sdk", path = "../app-sdk"}

# If enabled as a feature, the client will load "unpackaged" V-Apps by looking Cargo.toml
# to reconstruct the manifest. Otherwise, only packaged V-Apps will be loaded.
cargo_toml = { version = "0.22.1", optional = true }

async-trait = "0.1.81"
common = { path = "../common", features = ["serde_json"] }
goblin = "0.8.2"
hex = "0.4.3"
hidapi = { version = "2.6.3", optional = true }
ledger-apdu = { version = "0.11.0", optional = true }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
log = { version = "0.4.27", optional = true }
byteorder = "1.5.0"
