[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
sha2 = { version = "0.10.8", default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }

