[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", default-features = false, features = [
    "derive",
    "alloc",
] }
vanadium_macros = { workspace = true }

# Optional dependencies
ledger_device_sdk = { version = "1.15.4", optional = true }


[dev-dependencies]
sha2 = { version = "0.10.8", default-features = false }
postcard = { version = "1.0.8", default-features = false, features = ["alloc"] }

[features]
default = []
device_sdk = ["ledger_device_sdk"]

# This feature should only be used in the build.rs script app-sdk crate
wrapped_serializable = ["vanadium_macros/wrapped_serializable"]
