[package]
name = "app-vanadium"
version = "0.0.1"
authors = ["Salvatore Ingala"]
edition = "2021"

[dependencies]
common = { path = "../common", features=["device_sdk"] }
include_gif = "1.2.0"
serde = {version="1.0.192", default-features = false, features = ["derive"]}
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core"}
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
ledger_secure_sdk_sys = "1.7.0"
zeroize = "1.8.1"
ledger_device_sdk = { version = "1.21.0", features = ["debug"] }
spin = "0.9.8"
hex-literal = "0.4.1"

[profile.release]
opt-level = 3
lto = true

[features]
default = []
pending_review_screen = []

metrics = [] # Enable collection of performance metrics during execution

# Features only for speculos
trace = []              # prints each instruction to the console using semihosting
trace_full = ["trace"]  # also prints the state of the CPU registers
trace_colors = []       # if trace or trace_full are enabled, prints them with colors to the console

run_tests = []  # Run the test suite instead of the app

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0x10"  # DERIVE_MASTER
path = [""]
name = "Vanadium"

[package.metadata.ledger.nanox]
icon = "vanadium_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "vanadium_14x14.gif"

[package.metadata.ledger.stax]
icon = "vanadium_32x32.gif"

[package.metadata.ledger.flex]
icon = "vanadium_40x40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }

[workspace]
