[package]
name = "app-vanadium"
version = "0.0.1"
authors = ["Salvatore Ingala"]
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = {version="1.0.192", default-features = false, features = ["derive"]}
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
ledger_device_sdk = { git = "https://github.com/LedgerHQ/ledger-device-rust-sdk.git", branch = "vanadium", features = ["debug", "nano_nbgl", "io_new", "sys"] }

zeroize = "1.8.1"
hex-literal = "0.4.1"
subtle = { version = "2.6.0", default-features = false }

[profile.release]
opt-level = 3
lto = true

[features]
default = []
pending_review_screen = []

blind_registration = [] # allows blindly registering V-Apps. Only to be used in the CI.

metrics = [] # Enable collection of performance metrics during execution

# Features only for speculos
trace = []              # prints each instruction to the console using semihosting
trace_cpu = ["trace"]   # also prints the state of the CPU registers
trace_ecalls = []       # trace every time ecalls are executed
trace_pages = []        # trace every time a page is loaded from or committed to the host

trace_all = ["trace", "trace_cpu", "trace_ecalls", "trace_pages"]

trace_colors = []       # if tracing features are enabled, prints them with colors to the console

run_tests = []  # Run the test suite instead of the app

[package.metadata.ledger]
curve = ["secp256k1", "slip21"]
flags = "0x10"  # DERIVE_MASTER
path = [""]
path_slip21 = ["VANADIUM"]
name = "Vanadium"

[package.metadata.ledger.nanox]
icon = "icons/vanadium_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/vanadium_14x14.gif"

[package.metadata.ledger.stax]
icon = "icons/vanadium_32x32.gif"

[package.metadata.ledger.flex]
icon = "icons/vanadium_40x40.gif"

[package.metadata.ledger.apex_p]
icon = "icons/vanadium_32x32_bw.png"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "apex_p", "nanos", "nanox", "nanosplus"))'] }

[workspace]
