[package]
name = "vlib-bitcoin"
version = "0.32.5"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"

[features]
default = ["secp-lowmemory"]
std = []
rand-std = []
rand = []
serde = ["actual-serde", "hashes/serde", "secp256k1/serde", "internals/serde", "units/serde"]
secp-lowmemory = ["secp256k1/lowmemory"]


[lib]
name = "bitcoin"

[dependencies]

hashes = { path = "../bitcoin-hashes", package = "vlib-bitcoin-hashes", default-features = false, features = ["alloc", "io"] }
secp256k1 = { path = "../secp256k1", package="vlib-secp256k1", default-features = false, features = ["hashes", "alloc"] }

# TBD if we need to replace these with implementantions based on ecalls
base58 = { package = "base58ck", version = "0.1.0", default-features = false }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }

# The following dependencies are left unchanged, as we do not need to change anything
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = ["alloc"] }
hex_lit = "0.1.1"
internals = { package = "bitcoin-internals", version = "0.3.0", features = ["alloc"] }
io = { package = "bitcoin-io", version = "0.1.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../app-sdk"}
units = { package = "bitcoin-units", version = "0.1.0", default-features = false, features = ["alloc"] }

base64 = { version = "0.21.3", optional = true, default-features = false, features = ["alloc"] }
ordered = { version = "0.2.0", optional = true }
bitcoinconsensus = { version = "0.105.0+25.1", default-features = false, optional = true }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [ "derive", "alloc" ], optional = true }


[dev-dependencies]
serde_json = "1.0.0"
serde_test = "1.0.19"
bincode = "1.3.1"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)', 'cfg(mutate)', 'cfg(rust_v_1_60)'] }

[profile.release]
opt-level = 3
lto = true

[workspace]
