[package]
name = "secp256k1"
version = "0.29.1"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-secp256k1/"
repository = "https://github.com/rust-bitcoin/rust-secp256k1/"
documentation = "https://docs.rs/secp256k1/"
description = "Rust wrapper library for Pieter Wuille's `libsecp256k1`. Implements ECDSA and BIP 340 signatures for the SECG elliptic curve group secp256k1 and related utilities."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["alloc"]
# allow use of Secp256k1::new and related API that requires an allocator
alloc = []
lowmemory = []
# Note that unlike upstream, this doesn't require `std` on vanadium
global-context = []

[dependencies]

sdk = { package = "vanadium-app-sdk", path = "../../app-sdk"}

serde = { version = "1.0.103", default-features = false, optional = true }

# You likely only want to enable these if you explicitly do not want to use "std", otherwise enable
# the respective -std feature e.g., hashes-std
hashes = { package = "bitcoin_hashes", version = "0.14.0", optional = true, default-features = false }
subtle = { version = "2.6.1", default-features = false }
rand = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
serde_cbor = "0.10.0"
serde_test = "1.0.19"
bincode = "1.3.3"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true

[workspace]
members = []
exclude = ["no_std_test"]


 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(secp256k1_fuzz)', 'cfg(bench)'] }
