[package]
name = "vnd-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { package = "vlib-bitcoin", path = "../../../libs/bitcoin", features = ["serde"] }
common = { package = "vnd-bitcoin-common", path = "../common"}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
quick-protobuf = { version = "0.8.1", default-features = false }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk"}

[dev-dependencies]
bs58 = { version = "0.5.1"}

[workspace]
