[package]
name = "vnd-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { package = "vlib-bitcoin", path = "../../../libs/bitcoin", features = ["serde"] }
common = { package = "vnd-bitcoin-common", path = "../common"}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk"}

[profile.release]
opt-level = 3
lto = true

[workspace]
