[package]
name = "vnd-bitcoin"
version = "0.1.0"
edition = "2021"

[package.metadata.vapp]
name = "Bitcoin"
stack_size = 65536

[features]
autoapprove = []  # used for integration tests

[dependencies]
bitcoin = { version = "0.32.0", features = ["serde"], default-features = false }
common = { package = "vnd-bitcoin-common", path = "../common"}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk"}

[dev-dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk", features = ["test-mode"]}

[profile.release]
opt-level = "s"
lto = true
# improves LTO performance and code size (but it slows down compilation a bit)
codegen-units = 1

[workspace]

[patch.crates-io.bitcoin]
path = "../../../libs/bitcoin"
[patch.crates-io.bitcoin_hashes]
path = "../../../libs/bitcoin_hashes"
[patch.crates-io.secp256k1]
path = "../../../libs/secp256k1"
[patch.crates-io.getrandom]
path = "../../../libs/getrandom"
