[package]
name = "vnd-bitcoin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.5"
common = { package = "vnd-bitcoin-common", path = "../common"}
hex = "0.4.3"
hidapi = "2.6.3"
ledger-transport-hid = "0.11.0"
quick-protobuf = { version = "0.8.1", default-features = false }
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk"}
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }

# The following dependencies are only used for the binary executable.
# In the future, we might prefer to move the cli interface to a separate crate,
# in order to avoid pulling these dependencies in the library.
clap = { version = "4.5.31", features = ["derive"] }
rustyline = "15.0.0"
shellwords = "1.1.0"


[lib]
name = "vnd_bitcoin_client"
path = "src/lib.rs"

[[bin]]
name = "vnd_bitcoin_cli"
path = "src/main.rs"


[workspace]
