[package]
name = "vnd-bitcoin-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { package = "vlib-bitcoin", path = "../../../libs/bitcoin" }
common = { package = "vnd-bitcoin-common", path = "../common"}
hex = "0.4.3"
hidapi = "2.6.3"
ledger-transport-hid = "0.11.0"
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk"}
serde = "1.0.219"
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }

# The following dependencies are only used for the binary executable.
# In the future, we might prefer to move the cli interface to a separate crate,
# in order to avoid pulling these dependencies in the library.
clap = { version = "4.5.31", features = ["derive"] }
rustyline = "15.0.0"
shellwords = "1.1.0"
postcard = { version = "1.1.1", features = ["alloc"] }


[lib]
name = "vnd_bitcoin_client"
path = "src/lib.rs"

[[bin]]
name = "vnd_bitcoin_cli"
path = "src/main.rs"


[workspace]
