[package]
name = "vnd-bitcoin-common"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bitcoin = { version = "0.32.0", features = ["serde"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk" }
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
subtle = { version="2.6.1", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"

[profile.release]
opt-level = 3
lto = true

[workspace]

[patch.crates-io.bitcoin]
path = "../../../libs/bitcoin"
[patch.crates-io.bitcoin_hashes]
path = "../../../libs/bitcoin_hashes"
[patch.crates-io.secp256k1]
path = "../../../libs/secp256k1"
[patch.crates-io.getrandom]
path = "../../../libs/getrandom"
