[package]
name = "vnd-demo"
version = "0.1.0"
edition = "2021"

[package.metadata.vapp]
name = "Hello BtcPrague"
stack_size = 65536

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"]}
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk"}
serde = { version = "1.0.215", default-features = false, features = ["alloc", "derive"] }

[workspace]
