[package]
name = "vnd-demo-client"
version = "0.1.0"
edition = "2021"

[features]
speculos-tests = []

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk"}
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }

[lib]
name = "vnd_demo_client"
path = "src/lib.rs"

[[bin]]
name = "vnd_demo_cli"
path = "src/main.rs"


[workspace]
