[package]
name = "vnd-ethereum-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["dep:env_logger", "sdk/debug"]
speculos-tests = []

[dependencies]
common = { package = "vnd-ethereum-common", path = "../common" }
hex = "0.4.3"
hidapi = "2.6.3"
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk" }
serde = "1.0.219"
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }

# CLI dependencies
clap = { version = "4.5.31", features = ["derive"] }
rustyline = "=15.0.0"
shellwords = "1.1.0"
postcard = { version = "1.1.1", features = ["alloc"] }
env_logger = { version = "0.11.8", optional = true }

[dev-dependencies]
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk", features = ["test-utils"] }

[lib]
name = "vnd_ethereum_client"
path = "src/lib.rs"

[[bin]]
name = "vnd_ethereum_cli"
path = "src/main.rs"

[workspace]
