[package]
name = "vnd-sadik"
version = "0.1.0"
edition = "2021"

[package.metadata.vapp]
name = "Sadik"
stack_size = 65536


[dependencies]
common = { package = "vnd-sadik-common", path = "../common"}
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk"}
serde = { version = "1.0.215", default-features = false, features = ["alloc"] }

[workspace]
