[package]
name = "vnd-sadik-client"
version = "0.1.0"
edition = "2021"

[features]
speculos-tests = []

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
common = { package = "vnd-sadik-common", path = "../common"}
hex = "0.4.3"
hidapi = "2.6.3"
postcard = { version = "1.1.1", features = ["alloc"] }
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk"}
serde = "1.0.215"
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
k256 = { version = "0.13.4", features = ["schnorr"] }
hex-literal = "0.4.1"
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk", features = ["test-utils"] }
sha2 = "0.10.8"

[lib]
name = "vnd_sadik_client"
path = "src/lib.rs"

[workspace]
