[package]
name = "vnd-test"
version = "0.1.0"
edition = "2021"

[package.metadata.vapp]
name = "Test"
stack_size = 65536

[dependencies]
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
sdk = { package = "vanadium-app-sdk", path = "../../../app-sdk"}
sha2 = { version = "0.10.8", default-features = false }

[workspace]
