[package]
name = "vnd-test-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
speculos-tests = []
debug = ["dep:env_logger", "sdk/debug"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
hex = "0.4.3"
hidapi = "2.6.3"
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk"}
tokio = { version = "1.38.1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }
env_logger = { version = "0.11.8", optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
sdk = { package = "vanadium-client-sdk", path = "../../../client-sdk", features = ["test-utils"] }

[lib]
name = "vnd_test_client"
path = "src/lib.rs"

[[bin]]
name = "vnd_test_cli"
path = "src/main.rs"


[workspace]
