[package]
name = "ethapp-api"
version = "0.1.0"
edition = "2021"
authors = ["Vanadium Team"]
description = "Client library for the Xous Ethereum App service"
license = "Apache-2.0"
repository = "https://github.com/LedgerHQ/vanadium"

[features]
default = []
# Enable std support for host testing
std = ["ethapp-common/std"]
# Enable additional debug logging
debug = []

[dependencies]
# Shared types and opcodes
ethapp-common = { path = "../ethapp-common" }

# Serialization for IPC
rkyv = { version = "0.7", default-features = false, features = ["alloc", "size_32", "validation"] }

# Numeric traits for opcodes
num-traits = { version = "0.2", default-features = false }

# Xous dependencies (target-specific)
[target.'cfg(target_os = "xous")'.dependencies]
xous = "0.9"
xous-ipc = "0.10"
xous-names = "0.9"

# Host dependencies for testing
[target.'cfg(not(target_os = "xous"))'.dependencies]

[dev-dependencies]
